# teeny

./: pyproject.toml  readme.md  setup.py  update.ty
docs/: CNAME  README.md  _sidebar.md  index.html
docs/gettingstarted/: basicconcept.md  closure.md  controlflow.md  introduction.md  string.md  table.md
example/: allin1.ty  arrIter.ty  expr.ty  fact.ty  fib.ty  fileSystem.ty  fizzbuzz.ty  http.ty  listen.ty  math.ty  popcount.ty  scopeTest.ty  string.ty  test.json  test.txt
lib/: cat.ty  gui.wrapper.py  http.wrapper.py  test.ty
lib/Sagent/: .env  generate_random_numbers.py  linearRegression.py  llm.ty  medical_system.db  sagent.ty  tempPythonFile.py  william_young_report.txt  william_young_report_final.txt
lib/Sagent/RNN/: README.md  requirements.txt  sentiment_analysis.py
lib/Sagent/blog/: app.py  requirements.txt
lib/Sagent/blog/blogs/: helloworld.md
lib/Sagent/calculator/: index.html  script.js  style.css
lib/Sagent/prompt/: PLANNER  SYSTEM
lib/Sagent/todoapp/: script.js
src/: teeny.py
src/teeny/: AST.py  __init__.py  __main__.py  exception.py  glob.py  interpreter.py  lexer.py  parser.py  processor.py  runner.py  token.py  value.py
tests/: .coverage  test_arithmetic.py  test_ast.py  test_builtin.py  test_closure.py  test_control_flow.py  test_string.py  test_table.py  test_try_catch.py
